fix for omen notes alignment

--- a/Mork Borg/morkborgstyle.css
+++ b/Mork Borg/morkborgstyle.css
@@ -401,6 +401,12 @@
   color: #000;
 }
 
+.charsheet .omens-note {
+  margin-inline: auto;
+  margin-right: 5vw;
+  width: 10em;
+}
+
 .charsheet div.col-right {
   border-right: 2px solid black;
 }
@@ -470,6 +476,7 @@
   font-size: 1.5em;
 }
 
+.charsheet div.note,
 .charsheet span.note {
   font-size: .9em;
 }
@@ -812,7 +819,7 @@
 
 .sheet-darkmode .charsheet main span,
 .sheet-darkmode .charsheet main label,
-.sheet-darkmode .charsheet main label.inline span.unifraktur {
+.sheet-darkmode .ui-dialog .charsheet main label.inline span.unifraktur {
   background-color: transparent;
   color: #ff00ff;
   font-weight: normal;
@@ -820,6 +827,7 @@
 
 .sheet-darkmode .ui-dialog .charsheet label input[type="radio"]:not(:checked),
 .sheet-darkmode .ui-dialog .charsheet label input[type="radio"]:not(:checked) + span,
+.sheet-darkmode .ui-dialog .charsheet main div.note,
 .sheet-darkmode .ui-dialog .charsheet main span.note,
 .sheet-darkmode .ui-dialog .charsheet main .transparent-bg > label span,
 .sheet-darkmode .ui-dialog .charsheet main span.white-bg {
